@@ -21,13 +21,18 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
 
 import vn.com.viettel.dto.CatRecommendationTypeDto;
+import vn.com.viettel.dto.OrgDto;
 import vn.com.viettel.dto.RecommendationTypeSearchRequestDto;
+import vn.com.viettel.dto.UserDto;
+import vn.com.viettel.entities.CatOutstandingType;
 import vn.com.viettel.entities.CatRecommendationType;
+import vn.com.viettel.entities.SysOrg;
 import vn.com.viettel.entities.SysUser;
 import vn.com.viettel.mapper.CatRecommendationTypeMapper;
 import vn.com.viettel.repositories.jpa.CatRecommendationTypeRepository;
 import vn.com.viettel.repositories.jpa.SysUserRepository;
 import vn.com.viettel.services.CatRecommendationTypeService;
+import vn.com.viettel.utils.Constants;
 import vn.com.viettel.utils.Translator;
 import vn.com.viettel.utils.exceptions.CustomException;
 
@@ -44,6 +49,9 @@ public class CatRecommendationTypeServiceImpl implements CatRecommendationTypeSe
     private final CatRecommendationTypeMapper mapper;
     private final Translator translator;
     private final SysUserRepository userRepository;
+    private final org.modelmapper.ModelMapper modelMapper;
+    private final vn.com.viettel.repositories.jpa.SysOrgRepository sysOrgRepo;
+
 
     private static final Map<String, String> ALLOWED_SORT_FIELDS;
     static {
@@ -85,10 +93,11 @@ public class CatRecommendationTypeServiceImpl implements CatRecommendationTypeSe
     private Long getCurrentUserId() {
         SysUser u = getCurrentUserOrNull();
         if (u == null || u.getId() == null) {
-            throw new CustomException(
-                    HttpStatus.UNAUTHORIZED.value(),
-                    translator.getMessage("auth.unauthorized")
-            );
+            return Constants.DEFAULT_USER_ID;
+//            throw new CustomException(
+//                    HttpStatus.UNAUTHORIZED.value(),
+//                    translator.getMessage("auth.unauthorized")
+//            );
         }
         return u.getId();
     }
@@ -170,12 +179,15 @@ public class CatRecommendationTypeServiceImpl implements CatRecommendationTypeSe
 
         Page<CatRecommendationType> resultPage = repository.findAll(specification, pageRequest);
 
-        List<CatRecommendationTypeDto> dtoList = resultPage.getContent()
-                .stream()
+        List<CatRecommendationType> entities = resultPage.getContent();
+        List<CatRecommendationTypeDto> dtoList = entities.stream()
                 .map(mapper::toDto)
                 .toList();
 
+        enrichCreatedUpdatedUsers(entities, dtoList);
+
         return new PageImpl<>(dtoList, pageRequest, resultPage.getTotalElements());
+
     }
 
     private Specification<CatRecommendationType> buildSearchSpecification(
@@ -250,7 +262,10 @@ public class CatRecommendationTypeServiceImpl implements CatRecommendationTypeSe
 
         try {
             CatRecommendationType saved = repository.save(entity);
-            return mapper.toDto(saved);
+            CatRecommendationTypeDto dto = mapper.toDto(saved);
+            enrichCreatedUpdatedUsers(List.of(saved), List.of(dto));
+            return dto;
+
         } catch (DataIntegrityViolationException ex) {
             throw mapDataIntegrityViolation(ex, request.getTypeName());
         }
@@ -289,7 +304,10 @@ public class CatRecommendationTypeServiceImpl implements CatRecommendationTypeSe
 
         try {
             CatRecommendationType saved = repository.save(entity);
-            return mapper.toDto(saved);
+            CatRecommendationTypeDto dto = mapper.toDto(saved);
+            enrichCreatedUpdatedUsers(List.of(saved), List.of(dto));
+            return dto;
+
         } catch (DataIntegrityViolationException ex) {
             throw mapDataIntegrityViolation(ex, request.getTypeName());
         }
@@ -303,16 +321,19 @@ public class CatRecommendationTypeServiceImpl implements CatRecommendationTypeSe
                         HttpStatus.NOT_FOUND.value(),
                         translator.getMessage("catRecommendationType.notFound", id)
                 ));
-        return mapper.toDto(entity);
+        CatRecommendationTypeDto dto = mapper.toDto(entity);
+        enrichCreatedUpdatedUsers(List.of(entity), List.of(dto));
+        return dto;
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<CatRecommendationTypeDto> getAll() {
-        return repository.findAllByIsDeletedFalse()
-                .stream()
-                .map(mapper::toDto)
-                .collect(Collectors.toList());
+        List<CatRecommendationType> entities = repository.findAllByIsDeletedFalse();
+        List<CatRecommendationTypeDto> dtos = entities.stream().map(mapper::toDto).toList();
+        enrichCreatedUpdatedUsers(entities, dtos);
+        return dtos;
+
     }
 
     /**
@@ -431,4 +452,55 @@ public class CatRecommendationTypeServiceImpl implements CatRecommendationTypeSe
     private String defaultIfBlank(String s, String defaultVal) {
         return StringUtils.hasText(s) ? s.trim() : defaultVal;
     }
+
+    private UserDto mapUserDto(SysUser sysUser, Map<Long, SysOrg> sysOrgMap) {
+        if (sysUser == null) return null;
+        UserDto userDto = modelMapper.map(sysUser, UserDto.class);
+
+        // giống RecommendationMapper: gắn org vào user
+        if (sysOrgMap != null && sysUser.getOrgId() != null && sysOrgMap.containsKey(sysUser.getOrgId())) {
+            userDto.setOrg(modelMapper.map(sysOrgMap.get(sysUser.getOrgId()), OrgDto.class));
+        }
+        return userDto;
+    }
+
+    private void enrichCreatedUpdatedUsers(List<CatRecommendationType> entities, List<CatRecommendationTypeDto> dtos) {
+        if (entities == null || entities.isEmpty() || dtos == null || dtos.isEmpty()) return;
+
+        // lấy danh sách userId cần dùng (tránh N+1)
+        Set<Long> userIds = new HashSet<>();
+        for (CatRecommendationType e : entities) {
+            if (e.getCreatedBy() != null) userIds.add(e.getCreatedBy());
+            if (e.getUpdatedBy() != null) userIds.add(e.getUpdatedBy());
+        }
+
+        // load user map
+        Map<Long, SysUser> userMap;
+        if (userIds.isEmpty()) {
+            userMap = Collections.emptyMap();
+        } else {
+            // Nếu repo có findAllByIdInAndIsDeletedFalse thì dùng cái đó là tốt nhất
+            // userMap = userRepository.findAllByIdInAndIsDeletedFalse(new ArrayList<>(userIds))...
+            userMap = userRepository.findAllById(userIds).stream()
+                    .collect(Collectors.toMap(SysUser::getId, u -> u));
+        }
+
+        // load org map (nếu muốn giống Recommendation)
+        Map<Long, SysOrg> orgMap = sysOrgRepo.findAllByIsDeletedFalse().stream()
+                .collect(Collectors.toMap(SysOrg::getId, o -> o));
+
+        // enrich theo đúng index (dtos tạo từ entities theo order)
+        for (int i = 0; i < entities.size(); i++) {
+            CatRecommendationType e = entities.get(i);
+            CatRecommendationTypeDto dto = dtos.get(i);
+
+            if (e.getCreatedBy() != null && userMap.containsKey(e.getCreatedBy())) {
+                dto.setCreatedByUser(mapUserDto(userMap.get(e.getCreatedBy()), orgMap));
+            }
+            if (e.getUpdatedBy() != null && userMap.containsKey(e.getUpdatedBy())) {
+                dto.setUpdatedByUser(mapUserDto(userMap.get(e.getUpdatedBy()), orgMap));
+            }
+        }
+    }
+
 }
